--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ root = true
 [*]
 indent_style = space
 indent_size = 2
+max_line_length = 120
 charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
