--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier \"src/**/*.{ts,tsx,js,json,css,md}\" --write"
-  },
-  "devDependencies": {
-    "@astrojs/check": "^0.5.6",
-    "astro": "^4.4.15",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
+    "format": "prettier \"src/**/*.{ts,tsx,js,json,css,md,mdx}\" --write"
   },
   "dependencies": {
     "bootstrap": "^5.3.3"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.5.6",
+    "@astrojs/mdx": "^2.1.1",
+    "astro": "^4.4.15",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.2"
   }
 }
